--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<html>
+<html lang="en">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -34,22 +33,29 @@
 			padding: 5px;
 			background-color: white;
 		}
+
+		.help {
+			position: absolute;
+			top: 8;
+			right: 10;
+		}
 	</style>
 </head>
 
 <body>
 
 	<div class="center">
-		<h1 style="color: white;">Tron Light Cycles (Motocyclettes de lumiere de Tron )</h1>
-		<button id="pauseButton" type="button" onclick="pause()" disable=false
+		<h1 style="color: white;">Tron Light Cycles</h1>
+
+		<button id="pauseButton" type="button" onclick="pause()" disable="false"
 			style="width: 100px; height: 30px;">Pause</button>
-		<button id="goButton" type="button" onclick="go()" disabled=true
+		<button id="goButton" type="button" onclick="go()" disabled="true"
 			style="background-color: #B0B0B0; width: 100px; height: 30px;">Go</button>
 		<button type="button" onclick="restart()" style="width: 100px; height: 30px;">Restart</button>
 		<br><br>
 
 		<div class="left">
-			<p style="color:DodgerBlue;">Score player 1 </p>
+			<p style="color:DodgerBlue;">Score player 1</p>
 			<p id="score1"></p>
 		</div>
 
@@ -58,10 +64,24 @@
 			<p id="score2"></p>
 		</div>
 
-		<canvas id="myCanvas" width="700" height="570" style="border:2px solid #000000;">
-		</canvas>
-		<br><br>
+		<div class="help">
+			<img src="https://cdn-icons-png.flaticon.com/512/3272/3272412.png" alt="Help" width="20" height="20" title="For player 2, use keys : 
+			&#013 'w' to go up 
+			&#013 's' to go down 
+			&#013 'd' to go right 
+			&#013 'a' to go left">
+		</div>
 
+		<canvas id="myCanvas" width="700" height="500" style="border:2px solid #000000;">
+		</canvas>
+		<br>
+
+		<p style="color: white;">Mouse on : </p>
+		<button id="player1Button" type="button" onclick="changeMousePlayer()" disabled="true"
+			style="width: 100px; height: 30px; color:DodgerBlue;">Player 1</button>
+		<button id="player2Button" type="button" onclick="changeMousePlayer()"
+			style="width: 100px; height: 30px; color: tomato;">Player 2</button>
+		<br><br>
 	</div>
 
 	<script>
@@ -98,9 +118,6 @@
 		var lightCycle1_alive = true;
 		var lightCycle1_score = 0;
 		document.getElementById("score1").innerText = lightCycle1_score;
-		// début glissement souris
-		var tempX;
-		var tempY;
 
 		// Current position and direction of light cycle 2
 		var lightCycle2_x = NUM_CELLS_HORIZONTAL / 2;
@@ -111,6 +128,11 @@
 		var lightCycle2_score = 0;
 		document.getElementById("score2").innerText = lightCycle2_score;
 
+		// Mouse drag
+		var tempX;
+		var tempY;
+		var mousePlayer1 = true;
+
 		// to mark the initial grid cell as occupied
 		grid[lightCycle1_x][lightCycle1_y] = CELL_OCCUPIED;
 		grid[lightCycle2_x][lightCycle2_y] = CELL_OCCUPIED
@@ -119,10 +141,12 @@
 			switch (e.keyCode) {
 				// 1st player
 				case 38: // up arrow
+					e.preventDefault();
 					lightCycle1_vx = 0;
 					lightCycle1_vy = -1;
 					break;
 				case 40: // down arrow
+					e.preventDefault();
 					lightCycle1_vx = 0;
 					lightCycle1_vy = 1;
 					break;
@@ -156,31 +180,63 @@
 		}
 
 		function mouseDownHandler(e) {
-			tempX = e.pageX
-			tempY = e.pageY
+			// check if the mouse is on the canvas
+			if (e.pageX <= canvas.getBoundingClientRect().right
+				&& e.pageY <= canvas.getBoundingClientRect().bottom
+				&& e.pageX >= canvas.getBoundingClientRect().left
+				&& e.pageY >= canvas.getBoundingClientRect().top) {
+				tempX = e.pageX
+				tempY = e.pageY
+			}
 		}
 
 		function mouseUpHandler(e) {
-			delta_x = e.pageX - tempX
-			delta_y = e.pageY - tempY
+			// check if the mouse is on the canvas
+			if (e.pageX <= canvas.getBoundingClientRect().right
+				&& e.pageY <= canvas.getBoundingClientRect().bottom
+				&& e.pageX >= canvas.getBoundingClientRect().left
+				&& e.pageY >= canvas.getBoundingClientRect().top) {
+				delta_x = e.pageX - tempX
+				delta_y = e.pageY - tempY
 
-			if (Math.abs(delta_x) > Math.abs(delta_y)) {
-				if (delta_x > 0) { // geste vers la droite
-					lightCycle1_vx = 1;
-					lightCycle1_vy = 0;
+				if (Math.abs(delta_x) > Math.abs(delta_y)) {
+					if (delta_x > 0) { // geste vers la droite
+						mousePlayer1 ? (
+							lightCycle1_vx = 1,
+							lightCycle1_vy = 0
+						) : (
+							lightCycle2_vx = 1,
+							lightCycle2_vy = 0
+						);
+					}
+					else { // geste vers la gauche
+						mousePlayer1 ? (
+							lightCycle1_vx = -1,
+							lightCycle1_vy = 0
+						) : (
+							lightCycle2_vx = -1,
+							lightCycle2_vy = 0
+						);
+					}
 				}
-				else { // geste vers la gauche
-					lightCycle1_vx = -1;
-					lightCycle1_vy = 0;
+				else if (delta_y > 0) { // geste vers le bas
+					mousePlayer1 ? (
+						lightCycle1_vx = 0,
+						lightCycle1_vy = 1
+					) : (
+						lightCycle2_vx = 0,
+						lightCycle2_vy = 1
+					);
 				}
-			}
-			else if (delta_y > 0) { // geste vers le bas
-				lightCycle1_vx = 0;
-				lightCycle1_vy = 1;
-			}
-			else { // geste vers le haut 
-				lightCycle1_vx = 0;
-				lightCycle1_vy = -1;
+				else { // geste vers le haut 
+					mousePlayer1 ? (
+						lightCycle1_vx = 0,
+						lightCycle1_vy = -1
+					) : (
+						lightCycle2_vx = 0,
+						lightCycle2_vy = -1
+					);
+				}
 			}
 		}
 
@@ -211,6 +267,9 @@
 			// revive players
 			lightCycle1_alive = true;
 			lightCycle2_alive = true;
+
+			// reset time delay for motorcycle speed
+			timeDelay = 100;
 		}
 
 		var redraw = function () {
@@ -289,22 +348,21 @@
 					redraw();
 				}
 			}
-			// console.log("advance") // pour le chargé de lab (3.8)
 		}
 
-		let timer = setInterval(function () { advance(); }, 100 /*milliseconds*/);
+		var timeDelay = 100; // milliseconds
+		let timer = setInterval(function () { advance(); }, timeDelay);
+		let increaseSpeedTimer = setInterval(function () { increaseSpeed(); }, 200);
 
-		// setInterval(function () { augmenterVitesse(); }, 1000 /*milliseconds*/); // augmente la vitesse chaque 1 seconde
-
-		// var augmenterVitesse = function () {
-		// 	lightCycle1_vx *= 1.1;
-		// 	lightCycle1_vy *= 1.1;
-		// 	lightCycle2_vx *= 1.1;
-		// 	lightCycle2_vy *= 1.1;
-		// }
+		var increaseSpeed = function () {
+			clearInterval(timer);
+			timer = setInterval(function () { advance(); }, timeDelay);
+			timeDelay /= 1.01; // 1% decrease every 200 ms
+		}
 
 		function pause() {
 			clearInterval(timer);
+			clearInterval(increaseSpeedTimer);
 			document.getElementById("pauseButton").style.backgroundColor = "#B0B0B0";
 			document.getElementById('pauseButton').disabled = true;
 			document.getElementById('goButton').disabled = false;
@@ -318,10 +376,24 @@
 
 		function go() {
 			timer = setInterval(function () { advance(); }, 100 /*milliseconds*/);
+			increaseSpeedTimer = setInterval(function () { increaseSpeed(); }, 150);
 			document.getElementById("pauseButton").style.backgroundColor = null;
 			document.getElementById('pauseButton').disabled = false;
 			document.getElementById('goButton').disabled = true;
 			document.getElementById("goButton").style.backgroundColor = "#B0B0B0";
+		}
+
+		function changeMousePlayer() {
+			if (mousePlayer1) { // player 2 takes control
+				mousePlayer1 = false;
+				document.getElementById('player1Button').disabled = false;
+				document.getElementById('player2Button').disabled = true;
+			}
+			else { // player 1 takes control
+				mousePlayer1 = true
+				document.getElementById('player2Button').disabled = false;
+				document.getElementById('player1Button').disabled = true;
+			}
 		}
 
 	</script>
