--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 
 		<label class="muteButton" aria-label="Mute Music">
-			<input checked="checked" type="checkbox" onclick="muteMusic()">
+			<input type="checkbox" onclick="muteMusic()">
 			<svg viewBox="0 0 576 512" height="1em" class="mute">
 				<path
 					d="M301.1 34.8C312.6 40 320 51.4 320 64V448c0 12.6-7.4 24-18.9 29.2s-25 3.1-34.4-5.3L131.8 352H64c-35.3 0-64-28.7-64-64V224c0-35.3 28.7-64 64-64h67.8L266.7 40.1c9.4-8.4 22.9-10.4 34.4-5.3zM425 167l55 55 55-55c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-55 55 55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-55-55-55 55c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l55-55-55-55c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z">
@@ -65,11 +65,11 @@
 		<br><br>
 	</div>
 
-	<audio id="backgroundMusic" loop>
+	<audio id="backgroundMusic" loop muted>
 		<source src="audio/TRON_ Lightcycle Run (2023) - Ride Music.mp3" type="audio/mpeg">
 	</audio>
 
-	<audio id="collisionSound">
+	<audio id="collisionSound" muted>
 		<source src="audio/pop.mp3" type="audio/mpeg">
 	</audio>
 
